objects/zkups__UPSInternationalCommodity__c.object
<CustomObject>
    <customHelpPage>zkups__internationalShipmentHelp</customHelpPage>
    <description>UPS International Commodity stores data used for defining a commodity for international shipments</description>
    <fields>
        <fullName>zkups__CommodityCode__c</fullName>
        <description>Tariff codes are defined by customs authorities and used to classify products. Customs uses tariff codes to determine what duties will be payable on products. It is therefore important that the correct code is identified. Using the right code means that you will not be liable for excess customs duties or assessments. The standard harmonized tariff code is a six-digit code, though some contain more digits. The tariff code is unique for the product and its destination.</description>
        <inlineHelpText>Tariff codes are defined by customs authorities and used to classify products. Customs uses tariff codes to determine what duties will be payable on products. The standard harmonized tariff code is a six-digit code, though some contain more digits.</inlineHelpText>
        <label>Tariff Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CountryOfManufacture__c</fullName>
        <description>2 digit country code</description>
        <inlineHelpText>2 digit country code</inlineHelpText>
        <label>Country Of Manufacture</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__Description__c</fullName>
        <label>Description</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ExportType__c</fullName>
        <label>Export Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Foreign</fullName>
                </value>
                <value>
                    <fullName>Foreign Military</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__JointProduction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, &quot;JNT&quot; will be used as the country of origin code on the NAFTA form.</description>
        <inlineHelpText>If true, &quot;JNT&quot; will be used as the country of origin code on the NAFTA form.</inlineHelpText>
        <label>Joint Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__NumberOfPieces__c</fullName>
        <label>Number Of Packages Per Commodity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__PartNumber__c</fullName>
        <label>Part Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PreferenceCriteria__c</fullName>
        <label>Preference Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__ProducerInfo__c</fullName>
        <label>Producer Info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>The shipper is the producer of the good</fullName>
                </value>
                <value>
                    <fullName>Knowledge of whether the good qualifies as an originating good</fullName>
                </value>
                <value>
                    <fullName>Reliance on the producers written representation</fullName>
                </value>
                <value>
                    <fullName>A signed Certificate provided to the exporter by the producer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__ScheduleBNumber__c</fullName>
        <description>10 characters long and specific to North America. This is required for the SED form. The first 6 characters will be the harmonized code.</description>
        <inlineHelpText>10 characters long and specific to North America. This is required for the SED form. The first 6 characters will be the harmonized code.</inlineHelpText>
        <label>Schedule B Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduleBUnitOfMeasurementCode__c</fullName>
        <label>Schedule B Unit Of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barrels</fullName>
                </value>
                <value>
                    <fullName>Carat</fullName>
                </value>
                <value>
                    <fullName>Content Kilogram</fullName>
                </value>
                <value>
                    <fullName>Square Centimeters</fullName>
                </value>
                <value>
                    <fullName>Content Ton</fullName>
                </value>
                <value>
                    <fullName>Curie</fullName>
                </value>
                <value>
                    <fullName>Clean Yield Kilogram</fullName>
                </value>
                <value>
                    <fullName>Dozen</fullName>
                </value>
                <value>
                    <fullName>Dozen Pieces</fullName>
                </value>
                <value>
                    <fullName>Dozen Pairs</fullName>
                </value>
                <value>
                    <fullName>Fiber Meter</fullName>
                </value>
                <value>
                    <fullName>Gross Containers</fullName>
                </value>
                <value>
                    <fullName>Gram</fullName>
                </value>
                <value>
                    <fullName>Gross</fullName>
                </value>
                <value>
                    <fullName>Hundred</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Thousand Cubic Meters</fullName>
                </value>
                <value>
                    <fullName>Kilogram Total Sugars</fullName>
                </value>
                <value>
                    <fullName>Liter</fullName>
                </value>
                <value>
                    <fullName>Meter</fullName>
                </value>
                <value>
                    <fullName>Square Meters</fullName>
                </value>
                <value>
                    <fullName>Cubic Meters</fullName>
                </value>
                <value>
                    <fullName>Millicurie</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Pieces</fullName>
                </value>
                <value>
                    <fullName>Proof Liter</fullName>
                </value>
                <value>
                    <fullName>Pack</fullName>
                </value>
                <value>
                    <fullName>Pairs</fullName>
                </value>
                <value>
                    <fullName>Running Bales</fullName>
                </value>
                <value>
                    <fullName>Square</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__UnitOfMeasurementOther__c</fullName>
        <description>If an appropriate unit of measurement is not offered in the Unit of Measurement drop-down menu, Select &quot;Other&quot; for you Unit of Measurement and specify the suitable measurement in this field.</description>
        <inlineHelpText>If an appropriate unit of measurement is not offered in the Unit of Measurement drop-down menu, Select &quot;Other&quot; for you Unit of Measurement and specify the suitable measurement in this field.</inlineHelpText>
        <label>Other Unit Of Measurement</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__UnitOfMeasurement__c</fullName>
        <label>Unit Of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barrel</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Bunch</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Bolt</fullName>
                </value>
                <value>
                    <fullName>Butt</fullName>
                </value>
                <value>
                    <fullName>Canister</fullName>
                </value>
                <value>
                    <fullName>Centimeter</fullName>
                </value>
                <value>
                    <fullName>Container</fullName>
                </value>
                <value>
                    <fullName>Crate</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
                <value>
                    <fullName>Cylinder</fullName>
                </value>
                <value>
                    <fullName>Dozen</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Envelope</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Kilograms</fullName>
                </value>
                <value>
                    <fullName>Pound</fullName>
                </value>
                <value>
                    <fullName>Pounds</fullName>
                </value>
                <value>
                    <fullName>Liter</fullName>
                </value>
                <value>
                    <fullName>Meter</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Packet</fullName>
                </value>
                <value>
                    <fullName>Pallet</fullName>
                </value>
                <value>
                    <fullName>Piece</fullName>
                </value>
                <value>
                    <fullName>Pieces</fullName>
                </value>
                <value>
                    <fullName>Proof Liters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__UnitValue__c</fullName>
        <description>The Unit Value of the Commodity.

For Commercial Invoices, please specify the Unit of Measurement

For SED Forms, please specify the Schedule B Unit of Measurement</description>
        <inlineHelpText>The Unit Value of the Commodity.

For Commercial Invoices, please specify the Unit of Measurement

For SED Forms, please specify the Schedule B Unit of Measurement</inlineHelpText>
        <label>Price Per Unit</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkups__VehicleId__c</fullName>
        <description>The unique Vehicle Identification Number (VIN) in the proper format. Or The Product Identification Number (PIN) for those used self propelled vehicles for which there are no VINs. Or no Vehicle Title Number.</description>
        <inlineHelpText>The unique Vehicle Identification Number (VIN) in the proper format. Or The Product Identification Number (PIN) for those used self propelled vehicles for which there are no VINs. Or no Vehicle Title Number.</inlineHelpText>
        <label>Vehicle ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__WeightUnits__c</fullName>
        <description>Applies to Certificate of Origin and SED forms only.</description>
        <inlineHelpText>Applies to Certificate of Origin and SED forms only.</inlineHelpText>
        <label>Weight Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KGS</fullName>
                </value>
                <value>
                    <fullName>LBS</fullName>
                    <default>true</default>
                    <label>LBS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__Weight__c</fullName>
        <description>Applies to Certificate of Origin and SED forms only.</description>
        <inlineHelpText>Applies to Certificate of Origin and SED forms only.</inlineHelpText>
        <label>Weight</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>UPS International Commodity</label>
    <listViews>
        <fullName>Nolan_Daigle_UPSInternationalCommodity</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>zkups__All</fullName>
        <columns>NAME</columns>
        <columns>zkups__CountryOfManufacture__c</columns>
        <columns>zkups__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UPS International Commodity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPS International Commodities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>